src/snapshots/afrotd__parser__tests__interpreation_html_9.1.10_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.10.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Als sich das Spielgeschehen nach links verlagert, löst Tackle A77
            seinen Kontakt mit B50 über dessen Oberschenkeln, als A27 B50 an
            dessen Knien blockt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Chop Block. 15 Meter vom Basic Spot. Strafdurchführung vom
                Previous Spot, wenn sich das Foul hinter der neutralen Zone
                ereignet.
            </p>
        </details>
    </div>
</article>
