src/snapshots/afrotd__parser__tests__interpreation_html_9.1.10_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.10.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Unmittelbar nach dem Snap blocken der linke Guard A65 und der linke
            Tackle A79 gleichzeitig B66, der sich in der neutralen Zone
            befindet. (a) Beide Kontakte sind an den Oberschenkeln. (b) Ein
            Kontakt ist an der Gürtellinie und der andere an den Knien.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Legale Blocks wegen der tief/tief kombinierten Blocks. (b)
                Foul, Chop Block.
            </p>
        </details>
    </div>
</article>
