src/snapshots/afrotd__parser__tests__interpreation_html_9.1.10_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.10.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Tight End A87 und Wingback A43 fungieren als Vorblocker für den
            Ballträger, als beide gleichzeitig Linebacker B17 blocken, der sich
            drei Meter downfield befindet. (a) Beide Blocks sind über der
            Gürtellinie. (b) Ein Block ist über der Gürtellinie, der andere an
            den Knien.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Legale Blocks. (b) Foul, Chop Block.
            </p>
        </details>
    </div>
</article>
