src/snapshots/afrotd__parser__tests__interpreation_html_9.1.16_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.16.V
        </p>
    </div>
    <div class="message-body">
        <p>
            Nachdem B1 in den Kicker A25 lief, simuliert dieser, er wäre
            gerought worden.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Die Fouls heben sich auf.
            </p>
        </details>
    </div>
</article>
