src/snapshots/afrotd__parser__tests__interpreation_html_9.1.16_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.16.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            Kicker A1 bewegt sich in einer Scrimmage Kick-Formation zwei oder
            drei Schritte seitlich, um einen schlechten Snap zu recovern oder
            er recovert einen Snap, der über seinen Kopf flog, bevor er den
            Ball kickt. Er wird von B2 durch dessen erfolglosen Versuch, den
            Kick zu blocken, berührt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                A1 verliert in jedem Fall nicht automatisch seinen Schutz, es
                sei denn, er trägt oder besitzt den Ball außerhalb der Tackle
                Box oder mehr als fünf Meter hinter seiner ursprünlichen
                Position beim Snap. Während er sich in der Tackle Box befindet,
                hat A1 das Anrecht auf den Schutz wie in anderen
                Kicking-Situationen. Wenn es offensichtlich wird, dass A1
                versucht in einer normalen Punting-Situation zu kicken, müssen
                die Defense Spieler den Kontakt mit ihm vermeiden, nachdem er
                den Ball gekickt hat.
            </p>
        </details>
    </div>
</article>
