src/snapshots/afrotd__parser__tests__interpreation_html_9.1.17_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.17.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Während eines Downs verliert B55 seinen Helm ohne ein Helmfoul
            durch Team A. B55 nimmt seinen Helm sofort vom Boden auf, setzt ihn
            auf und verfolgt den Ballträger.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Persönliches Foul durch B55 für die weitere Spielteilnahme nach
                Helmverlust. 15-Meterstrafe. Die Game Clock stoppt am Ende des
                Downs und B55 muss das Spiel für den nächsten Down verlassen
                (Regel 3.3.10).
            </p>
        </details>
    </div>
</article>
