src/snapshots/afrotd__parser__tests__interpreation_html_9.1.2_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.2.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            1. und 10 von der A-25. Defender B21 steht in einer engen Deckung
            und schlägt gegen das Gesichtsgitter von Receiver A88. A88 wird
            dadurch daran gehindert, seine Passroute zu laufen. A12 wird für
            sieben Meter Raumverlust gesackt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Persönliches Foul durch B21 für Schlagen von A88. Team A erhält
                einen 1. und 10 von der A40. Bei dieser Art von Aktion ist für
                ein Foul keine Voraussetzung, dass ein andauernder Kontakt zum
                Gesicht, Helm (inklusive Helmgitter) oder Hals vorliegt, wie in
                Regel 9.1.8.a.
            </p>
        </details>
    </div>
</article>
