src/snapshots/afrotd__parser__tests__interpreation_html_9.1.3_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.3.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Passer A12 befindet sich in der Tackle Box und schaut nach einem
            freien Receiver. Kurz bevor oder gleichzeitig mit dem Wurf des
            Balles wird A12 von der Seite an den Rippen, dem Oberschenkel oder
            am Knie von B79 berührt, der mit der Helmoberseite voran durch ein
            Targeting A12 angriff.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Foul durch B79 wegen Targeting und Herbeiführen eines Forcible
                Contact mit der Helmoberseite. Automatische Disqualifikation.
            </p>
        </details>
    </div>
</article>
